--- a/src/languages/pt.json
+++ b/src/languages/pt.json
@@ -1,4 +1,7 @@
 {
+  "erela": {
+    "np": "🎧 Tocando Agora:"
+  },
   "avatar": {
     "from": "Avatar de:",
     "unknown": "Usuário desconhecido."
