--- a/src/languages/pt.json
+++ b/src/languages/pt.json
@@ -1,6 +1,10 @@
 {
   "erela": {
-    "np": "🎧 Tocando Agora:"
+    "np": "🎧 Tocando Agora:",
+    "end": "<:power:817075414961881099> A Fila acabou, estou saindo"
+  },
+  "play": {
+    "add": "<:adicionado:817077113453543424> Adicionado a fila:"
   },
   "avatar": {
     "from": "Avatar de:",
