--- a/src/languages/en.json
+++ b/src/languages/en.json
@@ -4,7 +4,8 @@
     "end": "<:power:817075414961881099> The queue is over, I'm leaving"
   },
   "play": {
-    "add": "<:adicionado:817077113453543424> Added the queue:"
+    "add": "<:adicionado:817077113453543424> Added the queue:",
+    "nada": "I need some argument, use: `%pplay <music | url> `"
   },
   "avatar": {
     "from": "Avatar from:",
