--- a/src/languages/pt.json
+++ b/src/languages/pt.json
@@ -1,11 +1,15 @@
 {
   "erela": {
     "np": "🎧 Tocando Agora:",
-    "end": "<:power:817075414961881099> A Fila acabou, estou saindo"
+    "end": "<:power:817075414961881099> A Fila acabou, estou saindo",
+    "solo": "😔 Infelizmente fiquei sozinha no canal, estou saindo"
   },
   "play": {
     "add": "<:adicionado:817077113453543424> Adicionado a fila:",
     "nada": "Preciso de algum argumento, utilize: `%pplay <música | url>`"
+  },
+  "nodes": {
+    "memoria": "Uso de memoria"
   },
   "avatar": {
     "from": "Avatar de:",
