--- a/src/languages/pt.json
+++ b/src/languages/pt.json
@@ -4,6 +4,10 @@
     "end": "<:power:817075414961881099> A Fila acabou, estou saindo",
     "solo": "😔 Infelizmente fiquei sozinha no canal, estou saindo"
   },
+  "daily": {
+    "coletado": "Você coletou **%m yens** diárias, volte amanhã e colete novamente.",
+    "coletou": "Você já coletou sua recompensa diária, colete-a novamente em **%th:%tm:%ts**"
+  },
   "botinfo": {
     "texto": "Olá, **%author** meu nome é **Star™**, tenho **13 anos**, fui"
   },
