--- a/src/languages/en.json
+++ b/src/languages/en.json
@@ -4,6 +4,10 @@
     "end": "<:power:817075414961881099> The queue is over, I'm leaving",
     "solo": "😔 Unfortunately I was alone on the channel, I'm leaving"
   },
+  "daily": {
+    "coletado": "You collected **%m yens** daily, come back tomorrow and collect again.",
+    "coletou": "You've already collected your daily reward, collect it again in **%th:%tm:%ts**"
+  },
   "play": {
     "add": "<:adicionado:817077113453543424> Added the queue:",
     "nada": "I need some argument, use: `%pplay <music | url> `"
