--- a/src/languages/en.json
+++ b/src/languages/en.json
@@ -4,6 +4,18 @@
     "end": "<:power:817075414961881099> The queue is over, I'm leaving",
     "solo": "😔 Unfortunately I was alone on the channel, I'm leaving"
   },
+  "perfil": {
+    "ngm": "NOBODY",
+    "desc": "Star is my friend, did you know that you can change this using \"%paboutme\"?"
+  },
+  "marry": {
+    "deseja": "want to marry you, do you accept?",
+    "vc": "You cannot marry yourself."
+  },
+  "sobre": {
+    "nada": "I need some argument, use: `%paboutme <text>`",
+    "alt": "About changed to: `%t`"
+  },
   "daily": {
     "coletado": "You collected **%m yens** daily, come back tomorrow and collect again.",
     "coletou": "You've already collected your daily reward, collect it again in **%th:%tm:%ts**"
