--- a/src/languages/en.json
+++ b/src/languages/en.json
@@ -13,6 +13,10 @@
     "min": "minutes",
     "hrs": "hours",
     "day": "days",
+    "term": "Ended at",
+    "host": "Hosted by: {user}",
+    "win": "winner(s)",
+    "wins": "Congratulations, {winners}! You won **{prize}**!\n{messageURL}",
     "react": "React with 🎉 to participate!",
     "restante": "Time remaining:",
     "no": "Giveaway cancelled, no valid participations",
