--- a/src/languages/en.json
+++ b/src/languages/en.json
@@ -17,7 +17,10 @@
   },
   "perfil": {
     "ngm": "NOBODY",
-    "desc": "Star is my friend, did you know that you can change this using \"%paboutme\"?"
+    "desc": "Star is my friend, did you know that you can change this using \"%paboutme\"?",
+    "comp": "Click on `🛒` to buy",
+    "succ": "Background purchased successfully",
+    "no": "You don't have enough money to buy this background"
   },
   "sugestao": {
     "insertChannel": "You did not specify a channel, run: `%pset-suggestions <#channel | channel id | disable>`.",
