--- a/src/languages/pt.json
+++ b/src/languages/pt.json
@@ -17,7 +17,10 @@
   },
   "perfil": {
     "ngm": "NINGUÉM",
-    "desc": "A Star é minha amiga, sabia que você pode alterar isso usando \"%psobremim\"?"
+    "desc": "A Star é minha amiga, sabia que você pode alterar isso usando \"%psobremim\"?",
+    "comp": "Clique no `🛒` para comprar",
+    "succ": "Background comprado com sucesso",
+    "no": "Você não tem dinheiro suficiente para comprar este background"
   },
   "sugestao": {
     "insertChannel": "Você não especificou um canal, utilize: `%pset-sugestao <#canal | canal id | desativar>`.",
