--- a/src/languages/pt.json
+++ b/src/languages/pt.json
@@ -10,6 +10,9 @@
   "yay": "Amei brincar com você!",
   "res": "[sim (**s**) / não (**n**)]"
   },
+  "starboard": {
+    "cont": "Conteúdo:"
+  },
   "rr": {
     "noargs": "Estão faltando argumentos, utilize `%prr <tipo> <@cargo> <:emoji:> [ID DA MENSAGEM]`",
     "desc": "Cria um Reaction Role onde membros podem ganhar determinados cargos reagindo na mensagem determinada.",
@@ -114,6 +117,11 @@
     "success": "Certo, irei mandar todas as mensagens de saida para o canal `%canal` automaticamente.",
     "disabled": "As mensagens de saida foram desativadas com sucesso.",
     "message": "Infelizmente, %m saiu do servidor. Agora temos **%c** membros."
+  },
+  "starboards": {
+    "insertChannel": "Você não especificou um canal, utilize: `%pstarboard <#canal | canal id | desativar>`.",
+    "success": "Certo, irei mandar todas o starboard para o canal `%canal` automaticamente.",
+    "disabled": "O starboard foi desativado com sucesso."
   },
   "guildLogs": {
     "insertChannel": "Você não especificou um canal, utilize: `%plogs <#canal | canal id | desativar>`.",
