--- a/src/languages/en.json
+++ b/src/languages/en.json
@@ -3,6 +3,10 @@
     "np": "🎧 Now Playing:",
     "end": "<:power:817075414961881099> The queue is over, I'm leaving"
   },
+  "ocr": {
+    "n": "Insert an image link or attach an image.",
+    "read": "Reading..."
+  },
   "aki": {
   "reg": "en",
   "q": "Question:",
